--- a/scrim.html
+++ b/scrim.html
@@ -86,7 +86,7 @@
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                     <h1 class="mb-3">Achivement League</h1>
-                    <p>Kumpulan Achivement League Team Genkichi Fiery</p>
+                    <p>Kumpulan Achivement Scrim Team Genkichi Fiery</p>
                 </div>
                 <div class="row g-4">
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
